syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.consensus">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";
import "custom_fees.proto";
import "duration.proto";
import "timestamp.proto";

/**
 * Current state of a topic.
 */
message ConsensusTopicInfo {
    /**
     * The memo associated with the topic (UTF-8 encoding max 100 bytes)
     */
    string memo = 1;


    /**
     * When a topic is created, its running hash is initialized to 48 bytes of binary zeros.
     * For each submitted message, the topic's running hash is then updated to the output
     * of a particular SHA-384 digest whose input data include the previous running hash.
     * 
     * See the TransactionReceipt.proto documentation for an exact description of the
     * data included in the SHA-384 digest used for the update.
     */
    bytes runningHash = 2;

    /**
     * Sequence number (starting at 1 for the first submitMessage) of messages on the topic.
     */
    uint64 sequenceNumber = 3;

    /**
     * Effective consensus timestamp at (and after) which submitMessage calls will no longer succeed on the topic
     * and the topic will expire and after AUTORENEW_GRACE_PERIOD be automatically deleted.
     */
    Timestamp expirationTime = 4;

    /**
     * Access control for update/delete of the topic. Null if there is no key.
     */
    Key adminKey = 5;

    /**
     * Access control for ConsensusService.submitMessage. Null if there is no key.
     */
    Key submitKey = 6;

    /**
     * If an auto-renew account is specified, when the topic expires, its lifetime will be extended
     * by up to this duration (depending on the solvency of the auto-renew account). If the
     * auto-renew account has no funds at all, the topic will be deleted instead.
     */
    Duration autoRenewPeriod = 7;

    /**
     * The account, if any, to charge for automatic renewal of the topic's lifetime upon expiry.
     */
    AccountID autoRenewAccount = 8;

    /**
     * The ledger ID the response was returned from; please see <a href="https://github.com/hashgraph/hedera-improvement-proposal/blob/master/HIP/hip-198.md">HIP-198</a> for the network-specific IDs. 
     */
    bytes ledger_id = 9;

    /**
     * Access control for update/delete of custom fees.
     * <p>
     * If unset, custom fees CANNOT be set for this topic.<br/>
     * If not set when the topic is created, this field CANNOT be set via
     *  update.<br/>
     * If set when the topic is created, this field MAY be changed via update.
     */
    Key fee_schedule_key = 10;

    /**
     * A set of keys that are allowed to submit messages to the topic without
     * paying the topic's custom fees.<br/>
     * If a submit transaction is signed by _any_ key included in this set,
     *  custom fees SHALL NOT be charged for that transaction.
     * <p>
     * fee_exempt_key_list MAY contain keys for accounts that are inactive,
     *  deleted, or non-existent.<br/>
     * If not set, there SHALL NOT be any fee-exempt keys.  In particular, the
     *  following keys SHALL NOT be implicitly or automatically added to this
     *  list: `adminKey`, `submitKey`, `fee_schedule_key`.
     */
    repeated Key fee_exempt_key_list = 11;

    /**
     * A set of custom fee definitions.<br/>
     * These are fees to be assessed for each submit to this topic.
     * <p>
     * Each fee defined in this set SHALL be evaluated for
     * each message submitted to this topic, and the resultant
     * total assessed fees SHALL be charged.<br/>
     * Custom fees defined here SHALL be assessed in addition to the base
     * network and node fees.
     */
    repeated ConsensusCustomFee custom_fees = 12;
}
